fixed video and image spacing

--- a/JH/src/main/webapp/app/userhome/cssfiles/videopreview.scss
+++ b/JH/src/main/webapp/app/userhome/cssfiles/videopreview.scss
@@ -19,14 +19,25 @@ body {
   }
 
   .content {
-    text-align: center;
+    text-align: flex-start;
     padding: 20px;
   }
 
+  .custom-width {
+    width: 200px;
+  }
+
   .video-image {
-    max-width: 25%;
-    height: auto;
-    text-align: center;
+    display: flex;
+    align-items: flex-start;
+    object-fit: contain;
+        max-width: 100%;
+        max-height: 275px;
+        // padding-left: 50px;
+    // max-width: 200px;
+    
+    // text-align: left;
+    // position:fixed;
     border: 3px solid rgba(48, 47, 47, 0.83); /* Adjust the border thickness and color as needed */
         border-radius: 5px; /* for rounded corners */
   }
@@ -40,6 +51,15 @@ body {
     font-size: 40px;
     font-weight:light;
     text-align: center;
+  }
+
+  .video-player{
+    display: flex;
+    // margin: 20px 0;
+    justify-items: flex-start;
+    // object-fit:cover;
+        width: 100%;
+        max-height: 100%;
   }
 
   .video-details {
